--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="container" id="app"></div>
+  <div class="container">
+    <div id="app"></div>
+  </div>
   <script src="js/auth.js"></script>
   <script src="js/collection.js"></script>
   <script src="js/wishlist.js"></script>
@@ -16,3 +18,4 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
