--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Game Collection Manager</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <div class="container">
-    <div id="app"></div>
-  </div>
-  <script src="js/auth.js"></script>
-  <script src="js/collection.js"></script>
-  <script src="js/wishlist.js"></script>
-  <script src="js/logger.js"></script>
-  <script src="js/ui.js"></script>
-  <script src="js/main.js"></script>
-</body>
-</html>
-
+ <html lang="en">
+ <head>
+   <meta charset="UTF-8">
+   <title>Game Collection Manager</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="css/style.css">
+ </head>
+ <body>
+   <div class="container" id="app"></div>
+   <script src="js/auth.js"></script>
+   <script src="js/collection.js"></script>
+   <script src="js/wishlist.js"></script>
+   <script src="js/logger.js"></script>
+   <script src="js/ui.js"></script>
+   <script src="js/main.js"></script>
+ </body>
+ </html>
